buges fix in verify email, improved forgot/reset password, added to api docs
