# main/serializers.py
@@ -3,7 +3,7 @@ from rest_framework import serializers
 from rest_framework_simplejwt.serializers import TokenObtainPairSerializer
 from rest_framework_simplejwt.settings import api_settings
 from main.models import Author, Subject, User, Video
-from main.utils import create_code, strong_password
+from main.utils import VERIFY_CODE_LENGTH, create_code, strong_password
 from django.db.models import Q
 from drf_extra_fields.fields import Base64ImageField
 
@@ -80,8 +80,9 @@ class EmailValidateSerializer(serializers.Serializer):
     def validate(self, data):
         if User.objects.filter(username = data['username']).exists() == False:
             raise serializers.ValidationError("اسم المستخدم غير صحيح. يرجى التواصل مع احد القائمين على التطبيق لحل هذه المشكلة")
-        if len(data['verify_code']) != 8:
-            raise serializers.ValidationError("يجب ان يكون الرمز مكون من ثمان خانات")
+        user = User.objects.get(username = data['username'])
+        if data['verify_code'] != user.verify_code:
+            raise serializers.ValidationError("الرمز غير صحيح")
         return data
 
 class ForgotPasswordSerializer(serializers.Serializer):
@@ -90,10 +91,11 @@ class ForgotPasswordSerializer(serializers.Serializer):
         try:
             user = User.objects.get(Q(username__iexact = data['username']) | Q(email__iexact = data['username']))
         except User.DoesNotExist:
-            raise serializers.ValidationError("البريد الالكتروني غير صحيح يرجى اعادة المحاولة.")
+            raise serializers.ValidationError({"username":"البريد الالكتروني او اسم المستخدم غير صحيح يرجى اعادة المحاولة."})
         else:
             return data
             
+# todo: change the code after a wrong attempt.
 class ResetPasswrodSerializer(serializers.Serializer):
     email = serializers.EmailField()
     verify_code = serializers.CharField(max_length = 10)
@@ -101,11 +103,12 @@ class ResetPasswrodSerializer(serializers.Serializer):
     password2 = serializers.CharField(style={'input_type': 'password'}, write_only=True)
     def validate(self, data):
         if User.objects.filter(email = data['email']).exists() == False:
-            raise serializers.ValidationError("البريد الالكتروني غير صحيح يرجى اعادة المحاولة.")
-        if len(data['verify_code']) != 8:
-            raise serializers.ValidationError("يجب ان يكون الرمز مكون من ثمان خانات")
+            raise serializers.ValidationError({"email":"البريد الالكتروني غير صحيح يرجى اعادة المحاولة."})
+        user = User.objects.get(email = data['email'])
+        if data['verify_code'] != user.verify_code:
+            raise serializers.ValidationError({"verify_code":"الرمز غير صحيح"})
         if data['password'] != data['password2']:
-            raise serializers.ValidationError("كلمتا السر غير متطابقتان")
+            raise serializers.ValidationError({"password":"كلمتا السر غير متطابقتان"})
         is_strong = strong_password(data['password'])
         if is_strong['status'] == False:
             raise serializers.ValidationError({'password': is_strong['report']})
